--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://kit.fontawesome.com/ddb7ea3ae2.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Catamaran&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/simplelightbox.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Phono - Headphones of the future</title>
+    <title>Цуцилівенергобуд</title>
 </head>
 <body>
     <nav class="navbar">
@@ -95,7 +95,7 @@
                 <a href="http://youtube.com"><i class="fab fa-youtube fa-2x"></i></a>
             </div>
             <div>
-                <h3>Контакти</h3>
+                <h3>Контакти:</h3>
                 <ul>
                     <li>78413, Івано-Франківська область,</li>
                     <li>Надвірнянський район, с. Цуцилів,</li>
@@ -104,7 +104,7 @@
             </div>
             <div>
         
-                <p>код ЄДРПОУ 41462055,</p>
+                <p>код ЄДРПОУ: 41462055,</p>
                 <p>тел. (0342) 54 37 37,</p>
                 <p>e-mail: tsutsyliv_energy@ukr.net</p>
                 
