--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div>
                 <a href="index.html"><h1>ТОВ"Цуцилівенергобуд"</h1></a>
-                <h4>Сонячна електростанція</h4>
+                <p class="solar">Сонячна електростанція</p>
                 <p class="top">ТОВ «Цуцилівенергобуд» засноване в 2017 році, знаходиться в селі Цуцилів Івано-Франківської
                      області, Надвірнянського району в урочищі «Лобище». Сонячна електростанція ТОВ «Цуцилівенергобуд»
                       оснащена найсучаснішим обладнанням і системою моніторингу від провідних світових виробників, 
