--- a/contacts.html
+++ b/contacts.html
@@ -30,7 +30,7 @@
             </div>
             <div class="map">
                     <p>Адреса:</p>
-                    <ul>
+                    <ul class="contact">
                         <li>78413</li>
                         <li>Івано-Франківська область</li>
                         <li>Надвірнянський район</li>
@@ -41,7 +41,7 @@
                         <li>e-mail: tsutsyliv_energy@ukr.net</li>
                     </ul> 
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5083.526709384997!2d24.64052477442061!3d48.74698537312026!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1suk!2sua!4v1575286703168!5m2!1suk!2sua" 
-                    width="1000" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                    width="1000" height="435" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                 </div>
        </div>
    </section>
