--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div>
                 <a href="index.html"><h1>ТОВ"Цуцилівенергобуд"</h1></a>
-                <p class="solar">Сонячна електростанція</p>
+                <h2>Сонячна електростанція</h2>
                 <p class="top">ТОВ «Цуцилівенергобуд» засноване в 2017 році, знаходиться в селі Цуцилів Івано-Франківської
                      області, Надвірнянського району в урочищі «Лобище». Сонячна електростанція ТОВ «Цуцилівенергобуд»
                       оснащена найсучаснішим обладнанням і системою моніторингу від провідних світових виробників, 
@@ -35,7 +35,7 @@
                        місцевої інфраструктури.
                 </p>
             </div>
-            <img src="img/showcase.jpg" alt="">
+            <!-- <img src="img/showcase.jpg" alt=""> -->
         </div>
         <h3>ТЕХНІЧНІ ХАРАКТЕРИСТИКИ ОБ'ЄКТА:</h3>
         <div class="container">
