--- a/reports.html
+++ b/reports.html
@@ -23,7 +23,7 @@
     </nav>
 
     <h1 class="reports">Звіти</h1>
-    <p class="reports">Звітні матеріали ТОВ "Цуцилівенергобуд"</p>
+    <p class="reporting">Звітні матеріали ТОВ "Цуцилівенергобуд"</p>
 <section class="section-c">
     <div class="container">
         <div class="energy">
@@ -49,7 +49,7 @@
         </div>
         <div class="audit">
                 <p>Аудит</p>
-                <ul>
+                <ul class="report">
                     <li><a href="">Фінансовий звіт Цуцилів_pdf</a></li>
                     <li><a href="">Аудиторський висновок ТОВ "Цуцилівенергобуд"</a></li>
                     <li><a href="">S0110011 1-м, 2-м. Фінансовий звіт суб’єкта малого підприємництва ТОВ "Цуцилівенергобуд" 2019 </a></li>
