--- a/contacts.html
+++ b/contacts.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://kit.fontawesome.com/ddb7ea3ae2.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Catamaran&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/simplelightbox.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Phono - Headphones of the future</title>
+    <title>ТОВ"Цуцилівенергобуд"</title>
 </head>
 <body>
     <nav class="navbar">
@@ -59,9 +59,10 @@
             <div>
                 <h3>Контакти</h3>
                 <ul>
-                    <li>78413, Івано-Франківська область,</li>
-                    <li>Надвірнянський район, с. Цуцилів,</li>
-                    <li>вул. Тракторна, 23,</li>
+                    <li>78413</li>
+                    <li>Івано-Франківська область</li>
+                    <li>Надвірнянський район</li>
+                    <li>с. Цуцилів, вул. Братів Бойчуків , 67 А</li>
                 </ul>
             </div>
             <div>
