--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <span>Технологія модулів:</span> кремнієві кристалічні </br>
                 <span>Кількість модулів:</span> 31464 шт</br>
                 <span>Виробник модулів:</span> Hanwha</br>
-                <span>Тип модулів:</span> Q Cells Q.Power-G5.0.G, 270 Wpі</br>
+                <span>Тип модулів:</span> Q Cells Q.Power-G5.0.G, 275 Wpі</br>
                 <span>Кількість інверторів:</span> 114 шт</br>
         </p>
 
@@ -97,9 +97,10 @@
             <div>
                 <h3>Контакти:</h3>
                 <ul>
-                    <li>78413, Івано-Франківська область,</li>
-                    <li>Надвірнянський район, с. Цуцилів,</li>
-                    <li>вул. Братів Бойчуків , 67 А,</li>
+                    <li>78413</li>
+                    <li>Івано-Франківська область</li>
+                    <li>Надвірнянський район</li>
+                    <li>с. Цуцилів, вул. Братів Бойчуків , 67 А</li>
                 </ul>
             </div>
             <div>
