--- a/reports.html
+++ b/reports.html
@@ -26,39 +26,10 @@
     <p class="reporting">Звітні матеріали ТОВ "Цуцилівенергобуд"</p>
 <section class="section-c">
     <div class="container">
-        <div class="energy">
-            <p>
-                -Інформація про частку кожного джерела енергії, яке було 
-                використане для виробництва електричної енергії (за попередній рік).
-            </p>
-                
-            <ul>
-                <li><a href="">Звіт про виробництво ТОВ "Цуцилівенергобуд" в 2019р.</a></li>
-                <li><a href="">S0403509 1П-НПП. Звіт про виробництво та реалізацію промислової продукції (річна)</a></li>
-                <li><a href="">Квитанція звіт про вир-вр ТОВ "Цуцилівенергобуд" 2019</a></li>
-                <li><a href="">S0403510 1П-НПП. Звіт про виробництво та реалізацію промислової продукції (річна)8432</a></li>
-                <li><a href="">Кв-я вир-во звіт 2018</a></li>
-            </ul>
-        </div>
-        <div class="ecology">
-            <p>
-                - Інформація про вплив на навколишнє природне середовище, спричинене виробництвом електричної 
-                енергії ( за попередній рік)?
-                (сонячна електростанція не завдає шкоди навколишньому природному середовищу)
-            </p>    
-        </div>
-        <div class="audit">
-                <p>Аудит</p>
-                <ul class="report">
-                    <li><a href="">Фінансовий звіт Цуцилів_pdf</a></li>
-                    <li><a href="">Аудиторський висновок ТОВ "Цуцилівенергобуд"</a></li>
-                    <li><a href="">S0110011 1-м, 2-м. Фінансовий звіт суб’єкта малого підприємництва ТОВ "Цуцилівенергобуд" 2019 </a></li>
-                    <li><a href="">S0110011 1-м, 2-м. Фінансовий звіт суб’єкта малого підприємництва ТОВ "Цуцилівенергобуд" 2019 </a></li>
-                    <li><a href="">Квитанція ТОВ "Цуцилівенергобуд" 2019</a></li>
-                </ul>          
-        </div>
+        <h1>Фінансовий звіт 2019</h1>
+        <a href="/reports/Фінансовий звіт 2019 Цуцилдівенергобуд.pdf" target="blanc">Завантажити "Фінансовий звіт 2019"</a>
         <div class="anual">
-            <p>Річні звіти</p>
+            
         </div>
     </div>
 </section>
