--- a/reports.html
+++ b/reports.html
@@ -27,7 +27,7 @@
 <section class="section-c">
     <div class="container">
         <h1>Фінансовий звіт 2019</h1>
-        <a href="/reports/Фінансовий звіт 2019 Цуцилдівенергобуд.pdf" target="blanc">Завантажити "Фінансовий звіт 2019"</a>
+        <a href="../reports/Фінансовий звіт 2019 Цуцилдівенергобуд.pdf" target="blanc">Завантажити "Фінансовий звіт 2019"</a>
         <div class="anual">
             
         </div>
